'添加商品统计历史查询功能'

--- a/app/14statistics/views/viewlist.html
+++ b/app/14statistics/views/viewlist.html
@@ -12,6 +12,10 @@
               
                 
               <label>使用时间</label>&nbsp;&nbsp;
+              <select class="form-control" ng-model="searchform.seltype" ng-change="changetype()">
+              	<option value="0">实时查询</option>
+              	<option value="1">历史查询</option>
+        	  </select>&nbsp;&nbsp;
               <div class="input-group">
               <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
                   <span class="input-group-btn">
