'修改团票按钮居中'

--- a/app/12sale/views/saledetail.html
+++ b/app/12sale/views/saledetail.html
@@ -41,6 +41,6 @@
     </div>
     
 </div>
-<div class="modal-footer">
+<div class="modal-footer" style='text-align:center;'>
     <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
 </div>
