--- a/app/12sale/views/sellingdetail.html
+++ b/app/12sale/views/sellingdetail.html
@@ -63,6 +63,6 @@
     </table>
 </div>
 
-<div class="modal-footer">
+<div class="modal-footer" style='text-align:center;'>
     <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
 </div>
