--- a/app/12sale/views/sellinggroupinfo.html
+++ b/app/12sale/views/sellinggroupinfo.html
@@ -49,7 +49,7 @@
 		</table>
 
 	</div>
-	<div class="modal-footer">
+	<div class="modal-footer" style='text-align:center;'>
 	    <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
 	</div>
 
