--- a/app/12sale/views/sellinggroupmodel.html
+++ b/app/12sale/views/sellinggroupmodel.html
@@ -101,7 +101,7 @@
 		</div>
 
 	</div>
-	<div class="modal-footer">
+	<div class="modal-footer" style='text-align:center;'>
 	    <button class="btn btn-primary" type="button" ng-click="gogo()">提交</button>
 	    <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
 	</div>
