--- a/app/12sale/views/sellinggroupsignup.html
+++ b/app/12sale/views/sellinggroupsignup.html
@@ -106,7 +106,7 @@
 	</div>
 	
 
-	<div class="modal-footer">
+	<div class="modal-footer" style='text-align:center;'>
 	    <button class="btn btn-primary" type="button" ng-click="go()">提交</button>
 	    <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
 	</div>
