--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -106,7 +106,7 @@
           ng-show="obj.sale_belong != 'juyou' || (obj.ticket_state == '2' && obj.sms_state == '2')"
           >重发短信</a>
           <a ng-click="relay(obj)" class="btn btn-warning btn-xs"
-          ng-show="obj.sale_belong == 'juyou' && obj.ticket_state == '2' && obj.sms_state == '2'"
+          ng-show="obj.sale_belong != 'juyou' || (obj.ticket_state == '2' && obj.sms_state == '2')"
           >转发短信</a>
           <a ng-click="back(obj)" class="btn btn-primary btn-xs"
           ng-show="obj.sale_belong == 'juyou' && obj.ticket_state == '2' && obj.sms_state == '2'"
