--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -206,7 +206,7 @@
 
 				  	<div class="form-group">
 					    <label class="col-xs-3 control-label">库存类型</label>
-					    <div class="col-xs-9">
+					    <div class="col-xs-2">
 					    	<label class="radio-inline">
 							  <input type="radio" name="stock_type" value="0"
 							  ng-model="saleobj.stock_type"
@@ -217,6 +217,10 @@
 							  ng-model="saleobj.stock_type"
 							  > 启用
 							</label>
+					    </div>
+					    <div class="col-xs-2" ng-show="saleobj.stock_type == 1">
+					    	<input type="number" class="form-control" placeholder="预存数量" min='0' ng-model="saleobj.current_stock_num"
+								>
 					    </div>
 				  	</div>
 
