'增加预存转移备注'

--- a/app/06deposit/views/trackinfo.html
+++ b/app/06deposit/views/trackinfo.html
@@ -26,7 +26,8 @@
 	        <th class="col-md-2 text-center">操作时间</th>
 	     <!--    <th class="col-md-2 text-center">操作机构</th>
 	        <th class="col-md-2 text-center">操作帐号</th> -->
-	        <th class="col-md-5 text-center">备注</th>
+	        <th class="col-md-3 text-center">用途</th>
+	        <th class="col-md-2 text-center">备注</th>
 
 	      </tr>
 	    </thead>
@@ -39,6 +40,7 @@
 	        <!-- <td class="text-center">{{obj.create_company_code}}</td>
 	        <td class="text-center">{{obj.create_login_name}}</td> -->
 	        <td class="text-center">{{obj.remarks}}</td>
+	        <td class="text-center">{{obj.depositremarks}}</td>
 	      </tr>
 	    </tbody>
 	  </table>
