--- a/app/06deposit/views/recharge.html
+++ b/app/06deposit/views/recharge.html
@@ -17,6 +17,15 @@
                 </div>
             </div>
 
+            <div class="form-group">
+                <label class="col-xs-4 control-label">备注</label>
+                <div class="col-xs-8">
+                    <textarea class="form-control" rows="3"
+					ng-model="obj.depositremarks"
+					></textarea>
+                </div>
+            </div>
+
         </div>
 
     </div>
