--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -252,6 +252,19 @@
 				  	</div>
 
 				  	<div class="form-group">
+					    <label class="col-xs-3 control-label">最大购买数量限制</label>
+					    <div class="col-xs-2">
+					    	<input type="number" class="form-control" 
+							ng-model="saleobj.max_limit"
+							>
+							
+					    </div>
+					    <div class="col-sm-5">
+					      <p class="form-control-static text-danger" >0:不限，其他数字:限制购买个数</p>
+					    </div>
+				  	</div>
+
+				  	<div class="form-group">
 						<label class="col-xs-3 control-label">团产品-预定须知</label>
 						<div class="col-xs-9">
 							<textarea class="form-control" rows="3"
