--- a/app/08view/views/viewmodel.html
+++ b/app/08view/views/viewmodel.html
@@ -306,14 +306,7 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">预订须知</label>
-						<div class="col-xs-9">
-							<textarea class="form-control" rows="3"
-							ng-model="viewobj.book_info"
-							></textarea>
-						</div>
-					</div>
+					
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">星级</label>
@@ -327,10 +320,6 @@
 				            </select>
 						</div>
 					</div>
-
-				</div>
-
-				<div class="col-xs-6">
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">好评</label>
@@ -405,6 +394,20 @@
 					</div>
 
 				</div>
+
+				<div class="col-xs-6">
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">预订须知</label>
+						<div class="col-xs-9">
+							<!-- <textarea class="form-control" rows="3"
+							ng-model="viewobj.book_info"
+							></textarea> -->
+							<div text-angular ng-model="viewobj.book_info"></div>
+						</div>
+					</div>
+
+				</div>
 			</div>
 
 
@@ -445,12 +448,7 @@
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label class="col-xs-3 control-label">预订须知</label>
-						<div class="col-xs-9">
-							<p class="form-control-static">{{viewobj.book_info}}</p>
-						</div>
-					</div>
+					
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">星级</label>
@@ -458,10 +456,6 @@
 							<p class="form-control-static">{{viewobj.star}}</p>
 						</div>
 					</div>
-
-				</div>
-
-				<div class="col-xs-6">
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">好评</label>
@@ -516,6 +510,17 @@
 						<label class="col-xs-3 control-label">排序</label>
 						<div class="col-xs-9">
 							<p class="form-control-static">{{viewobj.asort}}</p>
+						</div>
+					</div>
+
+				</div>
+
+				<div class="col-xs-6">
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">预订须知</label>
+						<div class="col-xs-9">
+							<p class="form-control-static" ng-bind-html="viewobj.book_info | trustHtml"/>
 						</div>
 					</div>
 
