--- a/app/03doc/views/name.html
+++ b/app/03doc/views/name.html
@@ -18,6 +18,9 @@
 				<option value="order"> 订单 </option>
 				<option value="instructions"> 接口调用说明 </option>
 				<option value="user"> 用户 </option>
+				<option value="sign_product"> 签名－产品 </option>
+				<option value="sign_order"> 签名－订单 </option>
+				<option value="sign_user"> 签名－用户 </option>
 			</select>
 
 		</div>
