--- a/app/14statistics/views/statisticssale.html
+++ b/app/14statistics/views/statisticssale.html
@@ -4,13 +4,18 @@
         <div class="form-group form-inline">
             <div class="col-sm-12">
 
+              <div class="row ">
               <input type="text" class="form-control" ng-model="searchform.company_code" placeholder="分销商编号">
               &nbsp;&nbsp;
 
               <input type="text" class="form-control" ng-model="searchform.login_name" placeholder="销售账户">
               &nbsp;&nbsp;
 
-                
+              <input type="text" class="form-control" ng-model="searchform.view" placeholder="景区编号">
+              &nbsp;&nbsp;
+              </div>
+
+              <div class="row mt15">
               <label>使用时间</label>&nbsp;&nbsp;
               <select class="form-control" ng-model="searchform.seltype" ng-change="changetype()">
               	<option value="0">实时查询</option>
@@ -32,6 +37,8 @@
               &nbsp;&nbsp;
 
               <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
+
+              </div>
               
             </div>
         </div>
@@ -43,9 +50,7 @@
     <thead>
       <tr>
         <th class="col-md-1 text-center">时间</th>
-        <th class="col-md-2 text-center">销售品名称</th>
-        <th class="col-md-1 text-center">销售品编号</th>
-
+        <th class="col-md-3 text-center">销售品名称</th>
         <th class="col-md-1 text-center">分销商</th>
         <th class="col-md-1 text-center">销售账户</th>
         <th class="col-md-1 text-center">购买数量</th>
@@ -53,13 +58,13 @@
         <th class="col-md-1 text-center">退票数量</th>
         <th class="col-md-1 text-center">单价</th>
         <th class="col-md-1 text-center">总计</th>
+        <th class="col-md-1 text-center">详情</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.date}}</td>
-        <td class="">{{obj.name}}</td>
-        <td class="text-center">{{obj.sale_code}}</td>
+        <td class="">{{obj.name}}<br>{{obj.sale_code}}</td>
         <td class="text-center">{{obj.company_name}}<br>{{obj.company_code}}</td>
         <td class="text-center">{{obj.operation_login_name}}</td>
         <td class="text-center">{{obj.buy}}</td>
@@ -67,19 +72,21 @@
         <td class="text-center">{{obj.back}}</td>
         <td class="text-center">{{obj.unit_price}}</td>
         <td class="text-center">{{(obj.total_buy - obj.total_back)  * 0.01 | currency : '￥'}}</td>
+        <td class="text-center">
+          <a ng-click="detail(obj)" ng-hide="obj.used == 0" class="btn btn-success btn-sm">使用详情</a>
+        </td>
       </tr>
       <tr >
         <td class="text-center">总计</td>
-        <td class="text-center"></td>
         <td class=""></td>
         <td class="text-center"></td>
         <td class="text-center"></td>
-
         <td class="text-center">{{total.buy}}</td>
         <td class="text-center">{{total.used}}</td>
         <td class="text-center">{{total.back}}</td> 
         <td class="text-center"></td>
         <td class="text-center">{{total.total * 0.01 | currency : '￥'}}</td>
+        <td class="text-center"></td>
       </tr>
 
     </tbody>
