--- a/app/14statistics/views/statisticsdetail.html
+++ b/app/14statistics/views/statisticsdetail.html
@@ -24,6 +24,14 @@
 		        <td class="text-center">{{obj.used}}</td>
 		        <td class="text-center">{{obj.unit_price}} * {{obj.used}} = {{obj.unit_price * obj.used}}</td>
 		      </tr>
+		      <tr >
+		        <td class="text-center"></td>
+		        <td class="text-center"></td>
+		        <td class="text-center"></td>
+		        <td class="text-center">合计</td>
+		        <td class="text-center">{{total.used}}</td>
+		        <td class="text-center">{{total.total}}</td>
+		      </tr>
 		    </tbody>
 		  </table>
 
