--- a/app/06deposit/views/list.html
+++ b/app/06deposit/views/list.html
@@ -2,7 +2,7 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div class="form-group form-inline">
-            <div class="col-sm-10">
+            <div class="col-sm-8">
                 <p class="form-control-static">
                     账户余额：{{balance_price | currency : '¥'}}
 
@@ -20,7 +20,10 @@
                 
                 <button type="button" class="btn btn-default" ng-click="load()">立即搜索</button> -->
             </div>
-            <div class="col-sm-2 text-right">
+
+            <div class="col-sm-4 text-right">
+
+                <button type="button" class="btn btn-default pull-right" ng-click="back()">充值回平台</button>
                 <button type="button" class="btn btn-info new" ng-click="create()"
                 has-permission='createdeposit' 
                 >创建预存</button>
