--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -90,7 +90,7 @@
         <td class="text-center">
           <span>购买{{obj.num}}</span><br>
           <span>退票{{obj.back}}</span><br>
-          <span ng-show="obj.sale_belong != 'langdao'">使用{{obj.used}}</span>
+          <span>使用{{obj.used}}</span>
         </td>
         <td class="text-center">{{obj.create_time}}</td>
         <td class="text-center"><br>{{obj.ticket_state_name}}</td>
