--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -265,6 +265,25 @@
 				  	</div>
 
 				  	<div class="form-group">
+					    <label class="col-xs-3 control-label">是否启用出游时间</label>
+					    <div class="col-xs-2">
+					    	<label class="radio-inline">
+							  <input type="radio" name="tour_date_tpye" value="0"
+							  ng-model="saleobj.tour_date_tpye"
+							  > 不启用
+							</label>
+							<label class="radio-inline">
+							  <input type="radio" name="tour_date_tpye" value="1"
+							  ng-model="saleobj.tour_date_tpye"
+							  > 启用
+							</label>
+					    </div>
+					    <div class="col-sm-5">
+					      <p class="form-control-static text-danger" >0:不限，其他数字:限制购买个数</p>
+					    </div>
+				  	</div>
+
+				  	<div class="form-group">
 						<label class="col-xs-3 control-label">团产品-预定须知</label>
 						<div class="col-xs-9">
 							<textarea class="form-control" rows="3"
