--- a/app/19guide/views/shakeevaluatequestion.html
+++ b/app/19guide/views/shakeevaluatequestion.html
@@ -25,6 +25,15 @@
 		</div>
 	</div>
 
+	<div class="form-group">
+		<label class="col-xs-2 control-label">排序</label>
+		<div class="col-xs-6">
+			<input type="text" class="form-control" placeholder="请输入排序"
+			ng-model="obj.sort"
+			>
+		</div>
+	</div>
+
 
 	<button 
     type="button" 
