--- a/app/99common/views/app.html
+++ b/app/99common/views/app.html
@@ -1,4 +1,4 @@
-<!-- top navbar-->
+top navbar-->
 <header>
 	<nav class="navbar navbar-custom ">
 	  <div class="container-fluid">
@@ -32,10 +32,20 @@
 		      	</li>
 		      </ul>
 		    </li>
-	        
 	      </ul>
 
+
 	      <ul class="nav navbar-nav navbar-right">
+	      	<!-- <li class="dropdown" uib-dropdown>
+	          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" uib-dropdown-toggle> 系统切换 <span class="caret"></span></a>
+	          <ul uib-dropdown-menu role="menu" aria-labelledby="single-button">
+	            <li><a href="#">Action</a></li>
+	            <li><a href="#">Another action</a></li>
+	            <li><a href="#">Something else here</a></li>
+	            <li role="separator" class="divider"></li>
+	            <li><a href="#">Separated link</a></li>
+	          </ul>
+	        </li> -->
 	        <li>
 		        <a href="manager/logout" class="btn " style="color: red;">
 		        	<span class="glyphicon glyphicon-off" aria-hidden="true"></span>
@@ -62,4 +72,4 @@
 	    <span class="glyphicon glyphicon-heart"></span> from 慧鼎商务
 	  </div>
 	</nav>
-</footer> -->
+</footer>
