--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -268,18 +268,19 @@
 					    <label class="col-xs-3 control-label">是否启用出游时间</label>
 					    <div class="col-xs-2">
 					    	<label class="radio-inline">
-							  <input type="radio" name="tour_date_tpye" value="0"
-							  ng-model="saleobj.tour_date_tpye"
+							  <input type="radio" name="tour_date_type" value="0"
+							  ng-model="saleobj.tour_date_type"
 							  > 不启用
 							</label>
 							<label class="radio-inline">
-							  <input type="radio" name="tour_date_tpye" value="1"
-							  ng-model="saleobj.tour_date_tpye"
+							  <input type="radio" name="tour_date_type" value="1"
+							  ng-model="saleobj.tour_date_type"
 							  > 启用
 							</label>
 					    </div>
 					    <div class="col-sm-5">
-					      <p class="form-control-static text-danger" >0:不限，其他数字:限制购买个数</p>
+					      <p class="form-control-static text-danger" >
+					      启用出游时间后，该销售品</p>
 					    </div>
 				  	</div>
 
