--- a/app/12sale/views/selling.html
+++ b/app/12sale/views/selling.html
@@ -160,7 +160,7 @@
 
       <div class="col-sm-12" ng-show="obj.tour_date_type == '1'">
         <p class="form-control-static text-danger" >
-        启用出游时间必填，该票种只能在出游日期使用！！！！</p>
+        出游时间必填，该票种只能在出游日期使用！！！！</p>
       </div>
 
 
