--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -109,7 +109,7 @@
           ng-show="obj.sale_belong != 'juyou' || (obj.ticket_state == '2' && obj.sms_state == '2')"
           >转发短信</a>
           <a ng-click="back(obj)" class="btn btn-primary btn-xs"
-          ng-show="obj.sale_belong == 'juyou' && obj.ticket_state == '2' && obj.sms_state == '2'"
+          ng-show="obj.sale_belong != 'langdao' && obj.ticket_state == '2' "
           >退多张票</a>
           
         </th>
