--- a/app/19guide/views/shakedevice.html
+++ b/app/19guide/views/shakedevice.html
@@ -19,11 +19,22 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-xs-2 control-label">设备所属机构</label>
+		<label class="col-xs-2 control-label">设备绑定类型</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control" placeholder="请输入设备所属机构"
-			ng-model="obj.binding_company_code"
-			>
+			<select class="form-control" ng-model="obj.type" 
+              ng-options="type.value as type.label for type in typearr"
+            >
+            </select>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="col-xs-2 control-label">设备绑定企业</label>
+		<bdiv class="col-xs-6">
+			<select class="form-control" ng-model="obj.type" 
+              ng-options="type.value as type.label for type in typearr"
+            >
+            </select>
 		</div>
 	</div>
 
@@ -37,21 +48,7 @@
 		</div>
 	</div> -->
 
-	<div class="form-group">
-		<label class="col-xs-2 control-label">设备绑定类型</label>
-		<div class="col-xs-6">
-			<label class="radio-inline">
-			  <input type="radio" name="binding_type" value="1"
-			  ng-model="obj.binding_type"
-			  > 旅行社评价
-			</label>
-			<label class="radio-inline">
-			  <input type="radio" name="binding_type" value="2"
-			  ng-model="obj.binding_type"
-			  > 景区评价
-			</label>
-		</div>
-	</div>
+	
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">绑定团号</label>
