--- a/app/13order/views/grouplistinfo.html
+++ b/app/13order/views/grouplistinfo.html
@@ -10,6 +10,7 @@
 		      	<th class="col-md-3 text-center">商品名称</th>
 		        <th class="col-md-1 text-center">姓名</th>
 		        <th class="col-md-2 text-center">电话</th>
+		        <th class="col-md-3 text-center">身份证号</th>
 		      </tr>
 		    </thead>
 		    <tbody>
@@ -18,6 +19,7 @@
 		      	<td class="text-center">{{obj.goods_name}}</td>
 		        <td class="text-center">{{obj.name}}</td>
 		        <td class="text-center">{{obj.mobile}}</td>
+		        <td class="text-center">{{obj.cardno}}</td>
 		      </tr>
 		    </tbody>
 		</table>
