--- a/app/19guide/views/shakedevice.html
+++ b/app/19guide/views/shakedevice.html
@@ -1,7 +1,7 @@
 <div class="col-xs-10 col-xs-offset-1 form-horizontal" >
 	
 	<div class="form-group">
-		<label class="col-xs-4 control-label">机器码</label>
+		<label class="col-xs-2 control-label">机器码</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="请输入机器码"
 			ng-model="obj.code"
@@ -10,7 +10,7 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-xs-4 control-label">设备名称</label>
+		<label class="col-xs-2 control-label">设备名称</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="设备名称"
 			ng-model="obj.name"
@@ -19,24 +19,24 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-xs-4 control-label">设备绑定类型</label>
-		<div class="col-xs-6">
-			<select class="form-control" ng-model="obj.binding_type" 
-              ng-options="type.value as type.label for type in typearr"
-            >
-            </select>
-		</div>
-	</div>
-
-	<!-- <div class="form-group">
-		<label class="col-xs-4 control-label">设备绑定团号</label>
+		<label class="col-xs-2 control-label">设备绑定类型</label>
 		<div class="col-xs-6">
 			<select class="form-control" ng-model="obj.type" 
               ng-options="type.value as type.label for type in typearr"
             >
             </select>
 		</div>
-	</div> -->
+	</div>
+
+	<div class="form-group">
+		<label class="col-xs-2 control-label">设备绑定企业</label>
+		<bdiv class="col-xs-6">
+			<select class="form-control" ng-model="obj.type" 
+              ng-options="type.value as type.label for type in typearr"
+            >
+            </select>
+		</div>
+	</div>
 
 	<!-- <div class="form-group">
 		<label class="col-xs-2 control-label">设备绑定类型</label>
@@ -49,8 +49,9 @@
 	</div> -->
 
 	
+
 	<div class="form-group">
-		<label class="col-xs-4 control-label">绑定团号</label>
+		<label class="col-xs-2 control-label">绑定团号</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" 
 			ng-model="obj.binding_code"
@@ -59,7 +60,7 @@
 	</div>
 
 	<div class="form-group">
-		<label class="col-xs-4 control-label">备注</label>
+		<label class="col-xs-2 control-label">备注</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" 
 			ng-model="obj.remarks"
