--- a/app/19guide/views/shakedevice.html
+++ b/app/19guide/views/shakedevice.html
@@ -21,22 +21,22 @@
 	<div class="form-group">
 		<label class="col-xs-2 control-label">设备绑定类型</label>
 		<div class="col-xs-6">
-			<select class="form-control" ng-model="obj.type" 
+			<select class="form-control" ng-model="obj.binding_type" 
               ng-options="type.value as type.label for type in typearr"
             >
             </select>
 		</div>
 	</div>
 
-	<div class="form-group">
+	<!-- <div class="form-group">
 		<label class="col-xs-2 control-label">设备绑定企业</label>
-		<bdiv class="col-xs-6">
+		<div class="col-xs-6">
 			<select class="form-control" ng-model="obj.type" 
               ng-options="type.value as type.label for type in typearr"
             >
             </select>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- <div class="form-group">
 		<label class="col-xs-2 control-label">设备绑定类型</label>
