摇一摇设备列表

--- a/app/19guide/views/shakedevicelist.html
+++ b/app/19guide/views/shakedevicelist.html
@@ -70,8 +70,8 @@
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.code}}</td>
         <td class="text-center">{{obj.name}}</td>
-        <td class="text-center">{{obj.binding_company_code}}</td>
-        <td class="text-center">{{obj.binding_type}}</td>
+        <td class="text-center">{{obj.binding_company_name}}</td>
+        <td class="text-center">{{obj.binding_type_name}}</td>
         <td class="text-center">{{obj.binding_code}}</td>
         <td class="text-center">{{obj.remarks}}</td>
         <td class="text-center">
