--- a/app/19guide/views/shakedevice.html
+++ b/app/19guide/views/shakedevice.html
@@ -23,20 +23,21 @@
 		<div class="col-xs-6">
 			<select class="form-control" ng-model="obj.binding_type" 
               ng-options="type.value as type.label for type in typearr"
+              ng-change="change(obj.binding_type)"
             >
             </select>
 		</div>
 	</div>
 
-	<!-- <div class="form-group">
-		<label class="col-xs-2 control-label">设备绑定企业</label>
+	<div class="form-group">
+		<label class="col-xs-2 control-label">设备所属机构</label>
 		<div class="col-xs-6">
-			<select class="form-control" ng-model="obj.type" 
-              ng-options="type.value as type.label for type in typearr"
+			<select class="form-control" ng-model="obj.binding_company_code" 
+              ng-options="type.binding_company_code as type.name for type in companyarr"
             >
             </select>
 		</div>
-	</div> -->
+	</div>
 
 	<!-- <div class="form-group">
 		<label class="col-xs-2 control-label">设备绑定类型</label>
