--- a/app/19guide/views/evaluatechart.html
+++ b/app/19guide/views/evaluatechart.html
@@ -47,14 +47,20 @@
 </div><!-- searchArea -->
 
 
+
 <div class="col-sm-12">
 
 	<div class="col-sm-7">
 
+	<div class="row">
 		<div class="col-sm-6">
 			<canvas id="pie" class="chart chart-pie"
 			  chart-data="data1" chart-labels="labels" chart-options="options">
 			</canvas> 
+			<!-- <canvas id="base" class="chart-base" chart-type="type"
+			  chart-data="data1" chart-labels="labels" >
+			</canvas>  -->
+
 			<div class="panel panel-default mt10">
 
 			  	<table class="table table-bordered">
@@ -105,62 +111,10 @@
 			</div>
 		</div>
 
-
-		<div class="col-sm-6">
-			<canvas id="pie" class="chart chart-pie"
-			  chart-data="data1" chart-labels="labels" chart-options="options">
-			</canvas> 
-			<div class="panel panel-default mt10">
-
-			  	<table class="table table-bordered">
-			      <div class="panel-heading text-center">交通工具安全舒适度</div>
-			      <tbody>
-			        <tr>
-			          <td class="text-center">非常满意</td>
-			          <td class="text-center">35人</td>
-			        </tr>
-			        <tr>
-			          <td class="text-center">一般满意</td>
-			          <td class="text-center">10人</td>
-			        </tr>
-			        <tr>
-			          <td class="text-center">不满意</td>
-			          <td class="text-center">5人</td>
-			        </tr>
-			      </tbody>
-			   	</table>
-			</div>
 		</div>
+		
 
-		<div class="col-sm-6">
-			<canvas id="pie" class="chart chart-pie"
-			  chart-data="data2" chart-labels="labels" chart-options="options">
-			</canvas> 
-			<div class="panel panel-default mt10">
-
-			  	<table class="table table-bordered">
-			      <div class="panel-heading text-center">
-			      	提供的餐饮标准
-			      </div>
-			      <tbody>
-			        <tr>
-			          <td class="text-center">非常满意</td>
-			          <td class="text-center">40人</td>
-			        </tr>
-			        <tr>
-			          <td class="text-center">一般满意</td>
-			          <td class="text-center">7人</td>
-			        </tr>
-			        <tr>
-			          <td class="text-center">不满意</td>
-			          <td class="text-center">3人</td>
-			        </tr>
-			      </tbody>
-			   	</table>
-			</div>
-		</div>
-
-
+		<div class="row">
 		<div class="col-sm-6">
 			<canvas id="pie" class="chart chart-pie"
 			  chart-data="data1" chart-labels="labels" chart-options="options">
@@ -214,6 +168,71 @@
 			   	</table>
 			</div>
 		</div>
+
+		</div>
+
+
+
+		<div class="row">
+		<div class="col-sm-6">
+			<canvas id="pie" class="chart chart-pie"
+			  chart-data="data1" chart-labels="labels" chart-options="options">
+			</canvas> 
+			<div class="panel panel-default mt10">
+
+			  	<table class="table table-bordered">
+			      <div class="panel-heading text-center">宣传及信息真实性</div>
+			      <tbody>
+			        <tr>
+			          <td class="text-center">非常满意</td>
+			          <td class="text-center">35人</td>
+			        </tr>
+			        <tr>
+			          <td class="text-center">一般满意</td>
+			          <td class="text-center">10人</td>
+			        </tr>
+			        <tr>
+			          <td class="text-center">不满意</td>
+			          <td class="text-center">5人</td>
+			        </tr>
+			      </tbody>
+			   	</table>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<canvas id="pie" class="chart chart-pie"
+			  chart-data="data2" chart-labels="labels" chart-options="options">
+			</canvas> 
+			<div class="panel panel-default mt10">
+
+			  	<table class="table table-bordered">
+			      <div class="panel-heading text-center">
+			      	提供的旅游娱乐活动
+			      </div>
+			      <tbody>
+			        <tr>
+			          <td class="text-center">非常满意</td>
+			          <td class="text-center">40人</td>
+			        </tr>
+			        <tr>
+			          <td class="text-center">一般满意</td>
+			          <td class="text-center">7人</td>
+			        </tr>
+			        <tr>
+			          <td class="text-center">不满意</td>
+			          <td class="text-center">3人</td>
+			        </tr>
+			      </tbody>
+			   	</table>
+			</div>
+		</div>
+
+		</div>
+
+
+
+
 
 	</div>
 
