--- a/app/19guide/views/shakedevice.html
+++ b/app/19guide/views/shakedevice.html
@@ -23,7 +23,7 @@
 		<div class="col-xs-6">
 			<select class="form-control" ng-model="obj.binding_type" 
               ng-options="type.value as type.label for type in typearr"
-              ng-change="change(obj.binding_type)"
+              ng-change="changeCompany(obj.binding_type)"
             >
             </select>
 		</div>
@@ -34,6 +34,7 @@
 		<div class="col-xs-6">
 			<select class="form-control" ng-model="obj.binding_company_code" 
               ng-options="type.binding_company_code as type.name for type in companyarr"
+              ng-change="changeGroup(obj.binding_company_code)"
             >
             </select>
 		</div>
@@ -52,13 +53,26 @@
 	
 
 	<div class="form-group">
-		<label class="col-xs-2 control-label">绑定团号</label>
+		<label class="col-xs-2 control-label">绑定团名</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control" 
-			ng-model="obj.binding_code"
-			>
+			<select class="form-control" ng-model="obj.binding_code" 
+              ng-options="group.group_id as group.group_name for group in grouparr"
+            >
+            </select>
 		</div>
 	</div>
+
+	<div class="form-group">
+		<label class="col-xs-2 control-label">绑定时间</label>
+		<div class="col-xs-6">
+			<div class="input-group">
+		    	<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
+		        <span class="input-group-btn">
+		          <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
+		        </span>
+		    </div>
+	    </div>
+    </div>
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">备注</label>
