--- a/app/19guide/views/shakedevicelist.html
+++ b/app/19guide/views/shakedevicelist.html
@@ -13,10 +13,10 @@
                   >
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
-                  <input type="text" class="form-control" ng-model="searchform.binding_company_code"  placeholder="设备所属机构">
+                  <input type="text" class="form-control" ng-model="searchform.binding_company_name"  placeholder="设备所属机构">
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
-                  <input type="text" class="form-control" ng-model="searchform.binding_code" placeholder="绑定团编号" >
+                  <input type="text" class="form-control" ng-model="searchform.group_name" placeholder="绑定团名" >
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
                   <label>设备绑定类型</label>&nbsp;&nbsp;
@@ -34,7 +34,16 @@
  
                 <div class="row mt10">
                   
-                  
+                  <label>
+	                <input type="checkbox" ng-model="usedate" 
+                    ng-true-value="1" ng-false-value="0"
+                  	> 绑定时间</label>&nbsp;&nbsp;
+	              <div class="input-group">
+                	<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
+                    <span class="input-group-btn">
+                      <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
+                    </span>
+	              </div>
                   
 
                   <button type="button" class="btn btn-default search pull-right" ng-click="create()">添加设备</button>
@@ -59,9 +68,10 @@
       <tr>
         <th class="col-md-2 text-center">设备编号</th>
         <th class="col-md-2 text-center">设备名称</th>
-        <th class="col-md-2 text-center">设备所属机构</th>
+        <th class="col-md-1 text-center">设备所属机构</th>
         <th class="col-md-1 text-center">设备绑定类型</th>
-        <th class="col-md-2 text-center">绑定团编号</th>
+        <th class="col-md-2 text-center">绑定团名</th>
+        <th class="col-md-1 text-center">绑定时间</th>
         <th class="col-md-2 text-center">备注</th>
         <th class="col-md-1 text-center">操作</th>
       </tr>
@@ -72,7 +82,8 @@
         <td class="text-center">{{obj.name}}</td>
         <td class="text-center">{{obj.binding_company_name}}</td>
         <td class="text-center">{{obj.binding_type_name}}</td>
-        <td class="text-center">{{obj.binding_code}}</td>
+        <td class="text-center">{{obj.group_name}}</td>
+        <td class="text-center">{{obj.binding_time}}</td>
         <td class="text-center">{{obj.remarks}}</td>
         <td class="text-center">
           <a ng-click="del(obj.id)" class="btn btn-danger btn-xs">删除</a>
